<resources>
    <string name="app_name">Emilia.Jakubowska</string>
    <string name="back">BACK</string>
    <string name="description">description</string>
    <string name="witam">Witam</string>
    <string name="email">E-mail</string>
    <string name="haslo">Hasło</string>
    <string name="wpiszEmail">Tu wpisz e-mail</string>
    <string name="wpiszHaslo">Tu wpisz hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_logged">LoggedActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title:</string>
    <string name="desc">Desc:</string>
</resources>
